Fixed background-image spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -61,13 +61,13 @@ a {
 
 .picture {
    background-image: url('../assets/ns_bg.jpg');
-   background-size: cover;
+   background-size: 107%;
+   // background-position: 0 0.1%, center;
    background-repeat: no-repeat;
-   display: fixed;
 }
 
 .container {
-   width: 83%;
+   width: 82%;
    margin: 0 auto;
 }
 
